--- a/css/style_preproc.scss
+++ b/css/style_preproc.scss
@@ -1,54 +1,70 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-header{
-    background: #FFF;
-    padding: 18px 0px;
-}
-header .container{
+
+header {
+  background: #FFF;
+  padding: 18px 0px;
+
+  .container {
     max-width: 940px;
     margin: auto;
     display: flex;
     align-items: center;
-}
-header img{
+  }
+
+  #toggle {
+  opacity: 0;
+  }
+
+  img {
     margin-right: 18px;
-}
-header h3{
+  }
+
+  h3 {
     margin-right: 461px;
-}
-header ul{
+  }
+
+  ul {
     display: flex;
     list-style: none;
-}
-header li{
+  }
+
+  li {
     color: #404040;
     font-size: 12px;
     font-family: Montserrat;
     line-height: 20px;
     text-transform: uppercase;
+
+    &:nth-of-type(2) {
+      margin-right: 34px;
+      margin-left: 34px;
+    }
+
+    &:nth-of-type(3) {
+      margin-right: 34px;
+    }
+  }
 }
-header ul li:nth-of-type(2){
-    margin-right: 34px;
-    margin-left: 34px;
-}
-header ul li:nth-of-type(3){
-    margin-right: 34px;
-}
-.making_brands{
-    background-image: url("./images/sea.jpg");
-    background-size: cover;
-    min-height: 391px;
-}
-main .container{
+
+main {
+  .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: auto;
     max-width: 940px;
+  }
 }
-.making_brands h1{
+
+.making_brands {
+  background-image: url("../images/sea.jpg");
+  background-size: cover;
+  min-height: 391px;
+
+  h1 {
     color: #FFF;
     text-align: center;
     font-size: 44px;
@@ -58,35 +74,41 @@ main .container{
     max-width: 672px;
     margin-bottom: 28px;
     padding-top: 105px;
-}
-.making_brands img{
+  }
+
+  img {
     width: 80px;
     height: 2px;
     margin-bottom: 25px;
-}
-.making_brands p{
+  }
+
+  p {
     color: rgba(255, 255, 255, 0.81);
     text-align: center;
     font-size: 15px;
     font-family: Vollkorn;
     line-height: 20px;
+  }
 }
-.minimalist{
-    background-color: #FEFEC9;
-}
-.minimalist .container{
+
+.minimalist {
+  background-color: #FEFEC9;
+
+  .container {
     padding-top: 60px;
     padding-bottom: 61px;
-}
-.minimalist p{
+  }
+
+  p {
     color: #47474F;
     text-align: center;
     font-size: 18px;
     font-family: Vollkorn;
     line-height: 25px;
     margin-bottom: 40px;
-}
-.minimalist a{
+  }
+
+  a {
     color: #47474F;
     text-align: center;
     font-size: 16px;
@@ -99,4 +121,5 @@ main .container{
     padding: 13px 34px 20px;
     border: solid #47474F 1px;
     display: inline-flex;
+  }
 }
