--- a/css/style_preproc.css
+++ b/css/style_preproc.css
@@ -42,6 +42,9 @@ main .container {
   background-image: url("../images/sea.jpg");
   background-size: cover;
   min-height: 391px; }
+  .making_brands .rectangle {
+    background-color: #FFFFFF;
+    margin-bottom: 25px; }
   .making_brands h1 {
     color: #FFF;
     text-align: center;
@@ -88,3 +91,326 @@ main .container {
     padding: 13px 34px 20px;
     border: solid #47474F 1px;
     display: inline-flex; }
+
+.how h3 {
+  padding: 80px 0px 70px;
+  color: #333;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
+  /* 156.522% */
+  text-transform: uppercase; }
+.how .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  max-width: 940px; }
+.how .square {
+  background: #F5F5F5;
+  padding: 50px 87px 50px 86px;
+  margin-bottom: 38px; }
+.how h4 {
+  color: #333;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  /* 125% */
+  text-transform: uppercase;
+  margin-bottom: 20px; }
+.how p {
+  max-width: 297px;
+  color: #333;
+  text-align: center;
+  font-family: Vollkorn;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  /* 146.667% */
+  padding-bottom: 75px; }
+.how .how_we {
+  display: flex;
+  flex-direction: row;
+  gap: 20px; }
+
+.recent_projects {
+  background: #F5F5F5;
+  padding: 80px 0px 90px; }
+  .recent_projects h3 {
+    margin-bottom: 80px;
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px;
+    /* 156.522% */
+    text-transform: uppercase; }
+  .recent_projects .woods {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; }
+    .recent_projects .woods article {
+      background: #FFF; }
+    .recent_projects .woods h4 {
+      color: #333;
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      /* 125% */
+      text-transform: uppercase;
+      padding-top: 20px; }
+    .recent_projects .woods p {
+      color: #333;
+      text-align: center;
+      font-family: Vollkorn;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      /* 142.857% */
+      padding-bottom: 21px; }
+
+.team {
+  padding: 100px 0px 80px; }
+  .team .our {
+    text-align: center; }
+  .team .our_team {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+    .team .our_team article a {
+      margin-right: 20px; }
+    .team .our_team article a:last-of-type {
+      margin-right: 0px; }
+    .team .our_team .photo {
+      margin-bottom: 20px; }
+    .team .our_team h4 {
+      margin-bottom: 5px; }
+    .team .our_team p {
+      margin-bottom: 20px; }
+  .team h3 {
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px;
+    /* 156.522% */
+    text-transform: uppercase; }
+  .team p {
+    color: #333;
+    text-align: center;
+    font-family: Vollkorn;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    /* 142.857% */ }
+  .team h4 {
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    /* 125% */
+    text-transform: uppercase; }
+
+.guys {
+  background: #F5F5F5;
+  padding: 70px 0px 100px; }
+  .guys .quotes {
+    text-align: center;
+    margin-bottom: 65px; }
+  .guys .these_guys {
+    flex-direction: row;
+    justify-content: space-around; }
+    .guys .these_guys article {
+      max-width: 338px;
+      text-align: center; }
+      .guys .these_guys article p {
+        color: #333;
+        text-align: center;
+        font-family: Vollkorn;
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 33px;
+        /* 126.923% */
+        margin-bottom: 25px; }
+      .guys .these_guys article img {
+        margin-bottom: 10px; }
+      .guys .these_guys article h4 {
+        color: #ABABAB;
+        text-align: center;
+        font-family: Montserrat;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px;
+        /* 142.857% */
+        text-transform: uppercase; }
+
+.last {
+  background-image: url("/images/image_19.jpg");
+  padding: 80px 0px 75px; }
+  .last h3 {
+    text-align: center;
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px;
+    /* 156.522% */
+    text-transform: uppercase; }
+  .last .last_container {
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center; }
+    .last .last_container h4 {
+      color: #333;
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      /* 125% */
+      text-transform: uppercase;
+      margin-bottom: 20px; }
+    .last .last_container p {
+      color: #212121;
+      text-align: center;
+      font-family: Vollkorn;
+      font-size: 17px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
+      /* 129.412% */ }
+    .last .last_container .contact_form {
+      margin-top: 50px; }
+    .last .last_container .links {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      padding-left: 20px; }
+      .last .last_container .links .facebook:before {
+        display: inline-block;
+        content: url("/images/image_24.svg");
+        margin-right: 10px; }
+      .last .last_container .links .twitter:before {
+        display: inline-block;
+        content: url("/images/image_25.svg");
+        margin-right: 10px; }
+      .last .last_container .links .linkedin:before {
+        display: inline-block;
+        content: url("/images/image_26.svg");
+        margin-right: 10px; }
+
+.rectangle {
+  width: 80px;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.09);
+  margin: auto;
+  margin-bottom: 45px;
+  margin-top: 30px; }
+
+footer section {
+  background-color: #000000;
+  padding-top: 69px;
+  padding-bottom: 75px; }
+footer .form {
+  max-width: 564px;
+  margin: auto;
+  border-radius: 0px; }
+footer #name {
+  background: rgba(255, 255, 255, 0.18);
+  box-sizing: border-box;
+  width: 100%;
+  height: 57px;
+  border: none;
+  padding: 18px 0px 17px 31px;
+  font-family: 'Vollkorn';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  color: #FFFFFF; }
+footer #email {
+  background: rgba(255, 255, 255, 0.2);
+  box-sizing: border-box;
+  width: 100%;
+  height: 57px;
+  border: none;
+  font-family: 'Vollkorn';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  color: #FFFFFF;
+  padding: 18px 0px 17px 30px; }
+footer #budget {
+  background: rgba(255, 255, 255, 0.18);
+  box-sizing: border-box;
+  width: 100%;
+  height: 57px;
+  border: none;
+  padding: 18px 0px 17px 31px;
+  font-family: 'Vollkorn';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  color: #FFFFFF; }
+footer #describe {
+  background: rgba(255, 255, 255, 0.2);
+  box-sizing: border-box;
+  width: 100%;
+  height: 128px;
+  resize: none;
+  border: none;
+  padding: 18px 0px 88px 31px;
+  font-family: 'Vollkorn';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  color: #FFFFFF;
+  margin-bottom: 21.95px; }
+footer .button {
+  max-width: 564px;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center; }
+footer .button_1 {
+  background: #000000;
+  background-color: transparent;
+  border: solid #7EC4BD 2px;
+  border-radius: 0px;
+  font-family: 'Vollkorn';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  text-align: center;
+  padding: 15.05px 60px 15.95px;
+  align-items: center;
+  color: #8BCAC3; }
+footer label {
+  display: block; }
