--- a/css/mobile_munu.css
+++ b/css/mobile_munu.css
@@ -12,9 +12,9 @@
     overflow: hidden; }
 
   #menu {
-    background: #2980D9;
+    background: rgba(41, 128, 217, 0.9);
     width: 100vw;
-    height: auto;
+    height: 100%;
     padding: 50px 0;
     color: #ECF0F1;
     display: flex;
@@ -24,7 +24,7 @@
     flex-direction: column;
     text-align: center;
     border-radius: 3px;
-    transition: all 300ms ease-in-out;
+    transition: all 500ms ease-in-out;
     position: fixed;
     top: -100vh;
     left: 0px;
@@ -36,9 +36,20 @@
       font-weight: 700; }
     #menu ul {
       list-style-type: none;
-      padding: 0; }
+      padding: 0;
+      display: flex;
+      flex-direction: column; }
       #menu ul li {
-        margin: 10px 0; }
+        margin: 25px 0;
+        color: #404040;
+        font-family: Montserrat;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px;
+        /* 166.667% */
+        text-transform: uppercase;
+        color: #ECF0F1; }
 
   #toggle {
     position: relative;
