--- a/css/mobile_munu.scss
+++ b/css/mobile_munu.scss
@@ -2,7 +2,7 @@
 $color-one: #34495E;
 $color-two: #ECF0F1;
 $color-three: #C0392D;
-$color-four: #2980D9;
+$color-four: rgba(41,128,217,0.9);
 
 @media (max-width: 768px) {
   * {
@@ -21,7 +21,7 @@ $color-four: #2980D9;
   #menu {
     background: $color-four;
     width: 100vw;
-    height: auto;
+    height: 100%;
     padding: 50px 0;
     color: $color-two;
     display: flex;
@@ -31,7 +31,7 @@ $color-four: #2980D9;
     flex-direction: column;
     text-align: center;
     border-radius: 3px;
-    transition: all 300ms ease-in-out;
+    transition: all 500ms ease-in-out;
     position: fixed;
     top: -100vh;
     left: 0px;
@@ -49,9 +49,19 @@ $color-four: #2980D9;
     ul {
       list-style-type: none;
       padding: 0;
+      display: flex;
+      flex-direction: column;
 
       li {
-        margin: 10px 0;
+        margin: 25px 0;
+        color: #404040;
+        font-family: Montserrat;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px; /* 166.667% */
+        text-transform: uppercase;
+        color: #ECF0F1;
       }
     }
   }
