--- a/css/style_preproc.scss
+++ b/css/style_preproc.scss
@@ -15,7 +15,7 @@ header {
   }
 
   #toggle {
-  opacity: 0;
+    opacity: 0;
   }
 
   img {
@@ -63,6 +63,11 @@ main {
   background-image: url("../images/sea.jpg");
   background-size: cover;
   min-height: 391px;
+
+  .rectangle {
+    background-color: #FFFFFF;
+    margin-bottom: 25px;
+  }
 
   h1 {
     color: #FFF;
@@ -121,5 +126,415 @@ main {
     padding: 13px 34px 20px;
     border: solid #47474F 1px;
     display: inline-flex;
+  }
+}
+
+.how {
+  h3 {
+    padding: 80px 0px 70px;
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px; /* 156.522% */
+    text-transform: uppercase;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    max-width: 940px;
+  }
+
+  .square {
+    background: #F5F5F5;
+    padding: 50px 87px 50px 86px;
+    margin-bottom: 38px;
+  }
+
+  h4 {
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 125% */
+    text-transform: uppercase;
+    margin-bottom: 20px;
+  }
+
+  p {
+    max-width: 297px;
+    color: #333;
+    text-align: center;
+    font-family: Vollkorn;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px; /* 146.667% */
+    padding-bottom: 75px;
+  }
+
+  .how_we {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+}
+
+.recent_projects {
+  background: #F5F5F5;
+  padding: 80px 0px 90px;
+
+  h3 {
+    margin-bottom: 80px;
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px; /* 156.522% */
+    text-transform: uppercase;
+  }
+
+  .woods {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    article {
+      background: #FFF;
+    }
+
+    h4 {
+      color: #333;
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px; /* 125% */
+      text-transform: uppercase;
+      padding-top: 20px;
+    }
+
+    p {
+      color: #333;
+      text-align: center;
+      font-family: Vollkorn;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px; /* 142.857% */
+      padding-bottom: 21px;
+    }
+  }
+}
+
+.team {
+  padding: 100px 0px 80px;
+
+  .our {
+    text-align: center;
+  }
+
+  .our_team {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    article {
+      a{
+        margin-right: 20px;
+      }
+      a {
+        &:last-of-type{
+          margin-right: 0px;
+        }
+      }
+    }
+
+    .photo {
+      margin-bottom: 20px;
+    }
+
+    h4 {
+      margin-bottom: 5px;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+  }
+
+  h3 {
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px; /* 156.522% */
+    text-transform: uppercase;
+  }
+
+  p {
+    color: #333;
+    text-align: center;
+    font-family: Vollkorn;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
+  }
+
+  h4 {
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 125% */
+    text-transform: uppercase;
+  }
+}
+
+.guys {
+  background: #F5F5F5;
+  padding: 70px 0px 100px;
+
+  .quotes {
+    text-align: center;
+
+    margin-bottom: 65px;
+  }
+
+  .these_guys {
+    flex-direction: row;
+    justify-content: space-around;
+
+    article {
+      max-width: 338px;
+      text-align: center;
+
+      p {
+        color: #333;
+        text-align: center;
+        font-family: Vollkorn;
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 33px; /* 126.923% */
+        margin-bottom: 25px;
+      }
+
+      img {
+        margin-bottom: 10px;
+      }
+
+      h4 {
+        color: #ABABAB;
+        text-align: center;
+        font-family: Montserrat;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px; /* 142.857% */
+        text-transform: uppercase;
+      }
+    }
+  }
+}
+
+.last {
+  background-image: url("/images/image_19.jpg");
+  padding: 80px 0px 75px;
+
+  h3 {
+    text-align: center;
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px; /* 156.522% */
+    text-transform: uppercase;
+  }
+
+  .last_container {
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+
+    h4 {
+      color: #333;
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px; /* 125% */
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+
+    p {
+      color: #212121;
+      text-align: center;
+      font-family: Vollkorn;
+      font-size: 17px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px; /* 129.412% */
+    }
+
+    .contact_form {
+      margin-top: 50px;
+    }
+
+    .links {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      padding-left: 20px;
+
+      .facebook:before {
+        display: inline-block;
+        content: url("/images/image_24.svg");
+        margin-right: 10px;
+      }
+
+      .twitter:before {
+        display: inline-block;
+        content: url("/images/image_25.svg");
+        margin-right: 10px;
+      }
+
+      .linkedin:before {
+        display: inline-block;
+        content: url("/images/image_26.svg");
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
+.rectangle {
+  width: 80px;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.09);
+  margin: auto;
+  margin-bottom: 45px;
+  margin-top: 30px;
+}
+
+footer {
+  section {
+    background-color: #000000;
+    padding-top: 69px;
+    padding-bottom: 75px;
+  }
+
+  .form {
+    max-width: 564px;
+    margin: auto;
+    border-radius: 0px;
+  }
+
+  #name {
+    background: rgba(255, 255, 255, 0.18);
+    box-sizing: border-box;
+    width: 100%;
+    height: 57px;
+    border: none;
+    padding: 18px 0px 17px 31px;
+    font-family: 'Vollkorn';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22px;
+    color: #FFFFFF;
+  }
+
+  #email {
+    background: rgba(255, 255, 255, 0.2);
+    box-sizing: border-box;
+    width: 100%;
+    height: 57px;
+    border: none;
+    font-family: 'Vollkorn';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22px;
+    color: #FFFFFF;
+    padding: 18px 0px 17px 30px;
+  }
+
+  #budget {
+    background: rgba(255, 255, 255, 0.18);
+    box-sizing: border-box;
+    width: 100%;
+    height: 57px;
+    border: none;
+    padding: 18px 0px 17px 31px;
+    font-family: 'Vollkorn';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22px;
+    color: #FFFFFF;
+  }
+
+  #describe {
+    background: rgba(255, 255, 255, 0.2);
+    box-sizing: border-box;
+    width: 100%;
+    height: 128px;
+    resize: none;
+    border: none;
+    padding: 18px 0px 88px 31px;
+    font-family: 'Vollkorn';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22px;
+    color: #FFFFFF;
+    margin-bottom: 21.95px;
+  }
+
+  .button {
+    max-width: 564px;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+  }
+
+  .button_1 {
+    background: #000000;
+    background-color: transparent;
+    border: solid #7EC4BD 2px;
+    border-radius: 0px;
+    font-family: 'Vollkorn';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22px;
+    text-align: center;
+    padding: 15.05px 60px 15.95px;
+    align-items: center;
+    color: #8BCAC3;
+  }
+
+  label {
+    display: block;
   }
 }
