--- a/css/mobile_munu.css
+++ b/css/mobile_munu.css
@@ -2,6 +2,8 @@
   * {
     box-sizing: border-box; }
 
+  header .logo {
+    padding-left: 30px; }
   header #toggle {
     opacity: 1; }
 
@@ -9,18 +11,17 @@
     font-size: 16px;
     background: #ECF0F1;
     text-align: right;
-    overflow: hidden; }
+    /*overflow: hidden;*/ }
 
   #menu {
     background: rgba(41, 128, 217, 0.9);
     width: 100vw;
     height: 100%;
-    padding: 50px 0;
+    padding: 150px 0;
     color: #ECF0F1;
     display: flex;
     visibility: visible;
     opacity: 1;
-    justify-content: center;
     flex-direction: column;
     text-align: center;
     border-radius: 3px;
@@ -41,22 +42,22 @@
       flex-direction: column; }
       #menu ul li {
         margin: 25px 0;
-        color: #404040;
         font-family: Montserrat;
         font-size: 25px;
         font-style: normal;
         font-weight: 400;
         line-height: 20px;
         /* 166.667% */
-        text-transform: uppercase;
-        color: #ECF0F1; }
+        text-transform: uppercase; }
+        #menu ul li a {
+          color: white; }
 
   #toggle {
-    position: relative;
+    position: absolute;
     width: 40px;
     height: 36px;
-    left: 20px;
-    top: 20px;
+    right: 40px;
+    top: 40px;
     transition: all 300ms ease-in-out;
     z-index: 10; }
     #toggle input {
@@ -97,4 +98,94 @@
         left: 0;
         transition: all 0.3s; }
       #toggle span:after {
-        top: 12px; } }
+        top: 12px; }
+
+  main .container {
+    max-width: 650px; }
+  main .how p {
+    max-width: 200px; }
+  main .how h3 {
+    font-size: 15px; }
+  main .how .square {
+    padding: 30px 35px 30px 30px;
+    margin-bottom: 38px; }
+  main .recent_projects h3 {
+    margin-bottom: 30px; }
+  main .team {
+    padding-bottom: 30px; }
+    main .team .our_team {
+      justify-content: space-around;
+      flex-wrap: wrap; }
+      main .team .our_team article {
+        padding-bottom: 30px; } }
+@media (max-width: 480px) {
+  main .container {
+    max-width: 400px; }
+  main .making_brands {
+    min-height: 350px; }
+    main .making_brands .rectangle {
+      background-color: #FFFFFF;
+      margin-bottom: 20px; }
+    main .making_brands h1 {
+      font-size: 30px;
+      margin-bottom: 15px;
+      padding-top: 80px; }
+    main .making_brands p {
+      margin: auto; }
+  main .minimalist {
+    background-color: #FEFEC9; }
+    main .minimalist .container {
+      padding-top: 40px;
+      padding-bottom: 41px; }
+    main .minimalist p {
+      margin-bottom: 20px; }
+    main .minimalist a {
+      padding: 15px 25px 15px; }
+  main .how .how_we {
+    flex-direction: column; }
+    main .how .how_we .square {
+      background: #F5F5F5;
+      padding: 50px 87px 50px 86px;
+      margin-bottom: 38px; }
+    main .how .how_we p {
+      margin: auto;
+      max-width: 300px;
+      padding-bottom: 30px; }
+  main .recent_projects {
+    padding: 30px 0px 30px; }
+    main .recent_projects .woods {
+      justify-content: center; }
+  main .team {
+    padding: 50px 0px 40px; }
+    main .team article {
+      padding-bottom: 30px; }
+  main .guys {
+    padding: 30px 0px 40px; }
+    main .guys .quotes {
+      margin-bottom: 35px; }
+    main .guys .these_guys article p {
+      font-size: 16px; }
+  main .last {
+    padding: 30px 0px 45px;
+    background-color: #82c8c3; }
+    main .last .last_container {
+      flex-direction: column; }
+      main .last .last_container article {
+        margin-bottom: 40px;
+        display: flex;
+        flex-direction: column;
+        background-color: #96dcd8;
+        width: 250px;
+        padding: 10px 0px; }
+        main .last .last_container article a {
+          order: 2;
+          margin-bottom: 20px; }
+        main .last .last_container article p {
+          font-size: 20px;
+          order: 3; }
+        main .last .last_container article h4 {
+          font-size: 18px;
+          order: 1; }
+        main .last .last_container article .links {
+          order: 3;
+          margin: auto; } }
