--- a/css/mobile_munu.scss
+++ b/css/mobile_munu.scss
@@ -2,32 +2,37 @@
 $color-one: #34495E;
 $color-two: #ECF0F1;
 $color-three: #C0392D;
-$color-four: rgba(41,128,217,0.9);
+$color-four: rgba(41, 128, 217, 0.9);
 
 @media (max-width: 768px) {
   * {
     box-sizing: border-box;
   }
-   header #toggle {
-    opacity: 1;
+  header {
+    .logo {
+      padding-left: 30px;
+    }
+
+    #toggle {
+      opacity: 1;
+    }
   }
   body {
     font-size: 16px;
     background: $color-two;
     text-align: right;
-    overflow: hidden;
+    /*overflow: hidden;*/
   }
 
   #menu {
     background: $color-four;
     width: 100vw;
     height: 100%;
-    padding: 50px 0;
+    padding: 150px 0;
     color: $color-two;
     display: flex;
     visibility: visible;
     opacity: 1;
-    justify-content: center;
     flex-direction: column;
     text-align: center;
     border-radius: 3px;
@@ -54,23 +59,24 @@ $color-four: rgba(41,128,217,0.9);
 
       li {
         margin: 25px 0;
-        color: #404040;
         font-family: Montserrat;
         font-size: 25px;
         font-style: normal;
         font-weight: 400;
         line-height: 20px; /* 166.667% */
         text-transform: uppercase;
-        color: #ECF0F1;
+        a{
+          color: white;
+        }
       }
     }
   }
   #toggle {
-    position: relative;
+    position: absolute;
     width: 40px;
     height: 36px;
-    left: 20px;
-    top: 20px;
+    right: 40px;
+    top: 40px;
     transition: all 300ms ease-in-out;
     z-index: 10;
 
@@ -129,6 +135,178 @@ $color-four: rgba(41,128,217,0.9);
       }
     }
   }
+  main {
+    .container {
+      max-width: 650px;
+    }
+
+    .how {
+      p {
+        max-width: 200px;
+      }
+
+      h3 {
+        font-size: 15px;
+      }
+
+      .square {
+        padding: 30px 35px 30px 30px;
+        margin-bottom: 38px;
+      }
+    }
+
+    .recent_projects {
+      h3 {
+        margin-bottom: 30px;
+      }
+    }
+
+    .team {
+      padding-bottom: 30px;
+
+      .our_team {
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+        article {
+          padding-bottom: 30px;
+        }
+      }
+    }
+  }
 }
 
+@media (max-width: 480px) {
+  main {
+    .container {
+      max-width: 400px;
+    }
 
+
+    .making_brands {
+      min-height: 350px;
+
+      .rectangle {
+        background-color: #FFFFFF;
+        margin-bottom: 20px;
+      }
+
+      h1 {
+        font-size: 30px;
+        margin-bottom: 15px;
+        padding-top: 80px;
+      }
+
+      p {
+        margin: auto;
+      }
+    }
+
+    .minimalist {
+      background-color: #FEFEC9;
+
+      .container {
+        padding-top: 40px;
+        padding-bottom: 41px;
+      }
+
+      p {
+        margin-bottom: 20px;
+      }
+
+      a {
+
+        padding: 15px 25px 15px;
+      }
+    }
+
+    .how {
+      .how_we {
+        flex-direction: column;
+
+        .square {
+          background: #F5F5F5;
+          padding: 50px 87px 50px 86px;
+          margin-bottom: 38px;
+        }
+
+        p {
+          margin: auto;
+          max-width: 300px;
+          padding-bottom: 30px;
+        }
+      }
+    }
+
+    .recent_projects {
+      padding: 30px 0px 30px;
+
+      .woods {
+        justify-content: center;
+      }
+    }
+
+    .team {
+      padding: 50px 0px 40px;
+
+      article {
+        padding-bottom: 30px;
+      }
+    }
+
+    .guys {
+      padding: 30px 0px 40px;
+
+      .quotes {
+        margin-bottom: 35px;
+      }
+
+      .these_guys {
+        article {
+          p {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+
+    .last {
+      padding: 30px 0px 45px;
+      background-color: #82c8c3;
+
+      .last_container {
+        flex-direction: column;
+
+        article {
+          margin-bottom: 40px;
+          display: flex;
+          flex-direction: column;
+          background-color:  #96dcd8;
+          width: 250px;
+          padding: 10px 0px;
+
+          a {
+            order: 2;
+            margin-bottom: 20px;
+          }
+
+          p {
+            font-size: 20px;
+            order: 3;
+
+          }
+
+          h4 {
+            font-size: 18px;
+            order: 1;
+          }
+
+          .links {
+            order: 3;
+            margin: auto;
+          }
+        }
+      }
+    }
+  }
+}
