--- a/css/style_preproc.css
+++ b/css/style_preproc.css
@@ -25,6 +25,8 @@ header {
     font-family: Montserrat;
     line-height: 20px;
     text-transform: uppercase; }
+    header li a {
+      text-decoration: none; }
     header li:nth-of-type(2) {
       margin-right: 34px;
       margin-left: 34px; }
@@ -414,3 +416,16 @@ footer .button_1 {
   color: #8BCAC3; }
 footer label {
   display: block; }
+footer .logo_2 {
+  text-align: center; }
+  footer .logo_2 img {
+    margin: 40px 0px 15px; }
+  footer .logo_2 p {
+    color: rgba(255, 255, 255, 0.4);
+    text-align: center;
+    font-family: Vollkorn;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    /* 146.667% */ }
