--- a/css/style_preproc.scss
+++ b/css/style_preproc.scss
@@ -414,19 +414,19 @@ main {
 
       .facebook:before {
         display: inline-block;
-        content: url("/images/image_24.svg");
+        content: url("../images/image_24.svg");
         margin-right: 10px;
       }
 
       .twitter:before {
         display: inline-block;
-        content: url("/images/image_25.svg");
+        content: url("../images/image_25.svg");
         margin-right: 10px;
       }
 
       .linkedin:before {
         display: inline-block;
-        content: url("/images/image_26.svg");
+        content: url("../images/image_26.svg");
         margin-right: 10px;
       }
     }
